# meetscribe

./: .gitignore  COMMANDS.md  pyproject.toml
meet/: __init__.py  cli.py  label.py  languages.py  pdf.py  summarize.py  transcribe.py
meet/prompts/: __init__.py  summary_system.txt  summary_user.txt  summary_user_lang.txt
tests/: test_cli_summarize.py  test_summarize.py
