[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["meet*"]

[project]
name = "meetscribe-offline"
version = "0.2.0"
description = "Fully local meeting transcription with speaker diarization, AI summaries, and PDF output"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "pretyflaco"}]
keywords = [
    "meeting",
    "transcription",
    "whisper",
    "whisperx",
    "diarization",
    "speaker-diarization",
    "pyannote",
    "ollama",
    "local-ai",
    "audio",
    "recording",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]
dependencies = [
    "python-dotenv>=1.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "whisperx>=3.8",
    "click>=8.0",
    "reportlab>=4.0",
    "requests>=2.28",
]

# PyTorch with CUDA 12.6 — override CPU-only torch from whisperx (Windows/Linux)
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.scripts]
meet = "meet.cli:main"

[project.urls]
Homepage = "https://github.com/pretyflaco/meetscribe"
Repository = "https://github.com/pretyflaco/meetscribe"
Issues = "https://github.com/pretyflaco/meetscribe/issues"

[project.optional-dependencies]
rtl = ["arabic-reshaper>=3.0", "python-bidi>=0.4"]
dev = ["ruff", "pytest"]
